docker-composeでbindするファイルを追加・更新した

--- a/server.properties
+++ b/server.properties
@@ -1,21 +1,24 @@
 #Minecraft server properties
-#Tue Mar 06 06:11:43 GMT 2018
+#Mon Sep 13 21:36:20 JST 2021
+spawn-protection=16
 max-tick-time=60000
+query.port=25565
 generator-settings=
+force-gamemode=true
 allow-nether=true
-force-gamemode=false
 gamemode=0
-enable-query=false
+dc_preset=notSet
+broadcast-console-to-ops=true
+enable-query=true
 player-idle-timeout=0
 difficulty=1
 spawn-monsters=true
 op-permission-level=4
-announce-player-achievements=true
 pvp=true
-snooper-enabled=true
-level-type=DEFAULT
+snooper-enabled=false
+level-type=quark_realistic
 hardcore=false
-enable-command-block=false
+enable-command-block=true
 max-players=20
 network-compression-threshold=256
 resource-pack-sha1=
@@ -23,7 +26,7 @@ max-world-size=29999984
 server-port=25565
 server-ip=
 spawn-npcs=true
-allow-flight=false
+allow-flight=true
 level-name=world
 view-distance=10
 resource-pack=
@@ -34,5 +37,6 @@ online-mode=true
 max-build-height=256
 level-seed=
 use-native-transport=true
-motd=Kelnet Gaming
+prevent-proxy-connections=false
 enable-rcon=false
+motd=\u00A7d\u00A7oSevTech\: Ages Server\u00A7r - \u00A74v3.2.1
